Fix body on mobile menu open [fixes #159866063]

--- a/app/assets/stylesheets/spree/frontend/_mobile_navbar.sass
+++ b/app/assets/stylesheets/spree/frontend/_mobile_navbar.sass
@@ -1,10 +1,6 @@
 body.mobile-menu-open
-  .site-content-wrap
-    position: fixed
-    width: 100%
-
-  #main-footer
-    display: none
+  position: fixed
+  width: 100%
 
 .mobile-menu-btn
   cursor: pointer
